--- a/cosmosLibrary/src/app/components/client/history/history.component.html
+++ b/cosmosLibrary/src/app/components/client/history/history.component.html
@@ -23,16 +23,52 @@
     </div>
 
     <app-header></app-header>
-    <div class="container py-5">
+    <div class="container py-5 px-0">
         <mat-tab-group mat-align-tabs="center">
             <mat-tab>
                 <ng-template mat-tab-label><mat-icon class="mr-2">shopping_basket</mat-icon>Compras</ng-template>
-                Content 1
+                <div class="row mt-4 mx-2">
+                    <div *ngFor="let item of shopping; index as j" class="col-lg-5 col-md-8 col-sm-11 my-2 mx-auto p-0  d-flex border border-secondary">
+                        <img class="img-fluid front-page" [src]="item.front_image" alt="">
+                        <div class="disposition9  px-2 m-0">
+                            <div class="d-flex flex-column align-items-start">
+                                <p class="mb-0">
+                                    {{item.title}}<br>
+                                    Isbn: {{item.isbn}}<br>
+                                    Precio Unitario: ${{item.price}}<br>
+                                    Cantidad:{{item.amount}}<br>
+                                    Total:{{item.total}}
+                                </p>
+                            </div>
+                            <div class="d-flex  justify-content-around mb-3">
+                                <div class="bg-icon zoom" (click)="requestRefound(item)"><mat-icon [inline]=true>compare_arrows</mat-icon></div>
+                            </div>
+                        </div>
+                    </div>
+                
+                </div>
             </mat-tab>
             
             <mat-tab>
                 <ng-template mat-tab-label><mat-icon class="mr-2">playlist_add_check</mat-icon>Reservas</ng-template>
-                Content 2
+                <div class="row mt-4 mx-2">
+                    <div *ngFor="let item of bookings; index as j" class="col-lg-3 col-md-4 col-sm-12 my-2 mx-auto d-flex border border-secondary p-0">
+                        <img class="img-fluid front-page" [src]="item.front_image" alt="">
+                        <div class="disposition9  px-2 m-0">
+                            <div class="d-flex flex-column align-items-start">
+                                <p class="mb-0">
+                                    {{item.title}}<br>
+                                    Isbn: {{item.isbn}}<br>
+                                    Precio: ${{item.price}}<br>
+                                </p>
+                            </div>
+                            <div class="d-flex  justify-content-around">
+                                <div class="bg-icon zoom" (click)="buyItem(item)"><mat-icon [inline]=true>done</mat-icon></div>
+                            </div>
+                        </div>
+                    </div>
+                
+                </div>
             </mat-tab>
             
         </mat-tab-group>
