--- a/cosmosLibrary/src/app/components/client/history/history.component.scss
+++ b/cosmosLibrary/src/app/components/client/history/history.component.scss
@@ -1,2 +1,43 @@
 @import '~bootstrap/scss/bootstrap-grid';
 
+.bg-icon{
+    border-radius: 50%;
+    z-index: 100;
+    cursor: pointer;
+    width: 30px;
+    height: 30px;
+    background-color:rgb(150, 150, 255);
+}
+
+.bg-icon > .mat-icon.mat-icon-inline{
+    font-size: 23px;
+    text-align: center;
+    line-height: 2rem;
+    color: black;
+}
+
+.zoom{
+    -webkit-transition: all 500ms ease-in-out;
+    transition: all 500ms ease-in-out;
+    overflow: hidden;
+}
+  
+.zoom:hover{
+    -webkit-transform: scale(1.05);
+    transform: scale(1.05);
+    cursor: pointer;
+}
+
+.front-page{
+    height: 130px;
+    object-fit: cover;
+    object-position: top;
+}
+
+.disposition9{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items:center;
+    flex-grow: 5;
+}
